--- a/src/components/generalAttribute.less
+++ b/src/components/generalAttribute.less
@@ -1,5 +1,5 @@
 .responsive-setting(@style1, @style2, @style3) {
-  @media screen and (max-width: 767px) {
+  @media screen and (min-width: 375px) {
     @style1();
   }
   @media screen and (min-width: 768px) {
